<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UpdateProductActivity">

    <EditText
        android:id="@+id/editTextName_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/minusButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/button_minus"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewQuantity_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:ignore="InefficientWeight,SpeakableTextPresentCheck,TextViewEdits" />

        <Button
            android:id="@+id/plusButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:text="@string/button_plus"
            android:textStyle="bold" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/labels_unit"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/saveProduct_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="returnUpdateProduct"
        android:text="@string/button_save" />

</LinearLayout>